default/6f0c85bb-462b-4eea-952b-3e659380d559/1/default_6f0c85bb-462b-4eea-952b-3e659380d559_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: istio-ingressgateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /api/v1/cat
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /api/v1/dog
  - backendRefs:
    - name: petstore
      port: 80
    matches:
    - method: POST
      path:
        type: Exact
        value: /api/v1/dog
